
12. Points grobs for pch=15:20 now check whether there is an explicit
    gpar(col). If so, the fill is set to that, otherwise this is
    retrieved from the viewport. (Simon)

13. Bumped the SVG version number to 1.1. (Simon)

14. Initial implementation of viewport coordinate info exporting.
    (Simon)

15. Added support for coordinate system importing and unit conversion.
    (Simon)


Changes from 0.8-0 to 0.9-0
===========================

1.  Added dependency on R >= 2.13.0

    (grid.grab(wrap=TRUE) only works with bug fix in r54813).

2.  Replaced partially matching arguments with full argument names. (Simon)

3.  Added plotmath support (outputs MathML).

    Note that positioning of MathML output is VERY unlikely to
    be accurate because there is not only the problem of font
    differences BUT ALSO the problem of a different math
    formula layout engine!

4.  Changed x11() to dev.new() in tests/*.R code.

5.  Added animation support for polygon grobs and path grobs.

6.  Changed translation of rastergrob grobs to SVG elements.
    They are now an <image> wrapped in two <g>s.
    The outer <g> provides a translation;  the inner <g> provides
    a scaling;  and the image is at (0, 0) and size (1, 1).
    This allows for ...

7.  Added animation support for rastergrob grobs.

8.  Added animation support for xspline grobs.

    Note that closed xsplines are unlikely to animate smoothly
    (because the result is an animated <path> with a variable 
     number of operations).

9.  Added 'group' argument for grid.hyperlink().


Changes from 0.7-0 to 0.8-0
===========================

1.  Started rounding all numeric values to 2 dp (in SVG output).

2.  Added "animValue" and "animUnit" classes to somewhat formalise
    the specification of animation values for attributes.

    Coercion methods are defined so that animation values can be
    specified as vectors, units, matrices, or lists (of units).

3.  Removed 'id' argument from grid.animate().
